--- a/client/src/app/pages/event-page/event-page.component.scss
+++ b/client/src/app/pages/event-page/event-page.component.scss
@@ -1,37 +1,78 @@
-.row  {
-  display: flex;
+* {
+  font-weight: bold;
+}
 
-  ul {
+ul {
+  padding: 0;
+  li {
+    list-style-type: none;
+  }
+}
+
+.russia-company {
+  position: fixed;
+  z-index: 2;
+  display: flex;
+  box-sizing: border-box;
+  padding-top: 20px;
+  background-color: #fff;
+  top: 50px;
+  li {
+    background-color: #fff;
+    width: 200px;
+    font-size: 18px;
+    padding: 15px 0;
+    text-align: center;
     display: flex;
-    padding: 0;
-    width: 100%;
-    li {
-      border-collapse: collapse;
-      border: 1px solid black;
-      padding: 15px 0;
-      width: 250px;
-      list-style: none;
-      text-align: center;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 10px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+
+    flex-shrink: 0;
+    margin-right: 30px;
+  }
+}
+
+.company {
+  li {
+    width: 200px;
+    text-align: center;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-right: 30px;
+    border-bottom: 1px solid #eee;
+    background-color: rgba(227, 242, 237, .5);
+
+    &:first-child {
+      padding-top: 20px;
     }
   }
 }
 
+
 .table-wrapper {
   display: flex;
+  margin-top: 30px;
+  position: relative;
 
-  .column {
-    width: 250px;
+  .column:nth-child(2) {
+    // margin-left: 230px;
+  }
 
-    ul {
-      padding: 0;
-      width: 100%;
-      li {
-        border-collapse: collapse;
-        border: 1px solid black;
-        padding: 15px 0;
-        list-style: none;
-        text-align: center;
-      }
+  .company__times {
+    // position: fixed;
+    // z-index: 1;
+    li {
+      font-size: 20px;
+      background: rgba(127, 129, 145, .5);
     }
   }
 }
