--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,7 +3,23 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+mat-drawer-container {
+  overflow: auto;
+  position: relative;
+  height: 100%;
+
+  background-color: #fff !important;
+}
+
+.mat-tooltip-panel *{
+  font-size: 20px;
+}
 
 .mat-table {
   width: 100%;
 }
+
+.mat-drawer-content {
+  padding: 0 15px;
+}
+
